--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
         <div id="result"></div>
         
         <footer class="ai-footer">
-            Stworzone z pomocą <a href="https://ai.google" target="_blank" rel="noopener noreferrer">AI od Google przez Piotr M 🚂</a>
+            Stworzone z pomocą <a href="https://ai.google" target="_blank" rel="noopener noreferrer">AI od Google</a> przez <a>Piotr M 🚂</a>
         </footer>
 
     </div>
