--- a/index.html
+++ b/index.html
@@ -194,6 +194,16 @@
         
         <footer class="ai-footer">
             Stworzone z pomocą <a href="https://ai.google" target="_blank" rel="noopener noreferrer">AI od Google</a> przez <a>Piotr M 🚂</a>
+
+               <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-W05T4L1HFD"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-W05T4L1HFD');
+</script>
         </footer>
 
     </div>
